--- a/website_php_2203/Styles/fourMediumStories.css
+++ b/website_php_2203/Styles/fourMediumStories.css
@@ -1,15 +1,17 @@
 .fourMediumComponents {
     background-color: #e6e6e6;
-    
+}
+
+.greyBlock a:hover {
+    color: #194fb0;
 }
 
 .greyBlock .header {
-    margin-right:100px;
+    margin-right: 100px;
     margin-bottom: 10px;
     border-bottom: 3px solid #194fb0;
-} 
+}
+
 .greyBlock h4 {
-    
     margin-bottom: 10px;
-    
 }
