--- a/website_php_2203/Styles/mainStory.css
+++ b/website_php_2203/Styles/mainStory.css
@@ -10,6 +10,10 @@
     padding-bottom: 0px;
 }
 
+.mainStory a:hover {
+    color: #FFC845;
+}
+
 .mainStoryLeft .headerWithPubDate {
     display: flex;
     justify-content: space-between;
@@ -23,12 +27,27 @@
 
 .mainStoryLeft .pubDate p {
     padding-left: 15px;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 600;
 }
 
-.mainStoryLeft .pubDate {
+.mainStoryLeft .pubDate p {
     border-left: 3px solid #DC4C3A;
+}
+
+.mainStoryLeft .flexSection {
+    display: flex;
+}
+
+.mainStoryLeft .readMore p {
+    font-size: 16px;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+.mainStoryLeft .readMore i {
+    margin-right: 2.5px;
 }
 
 .mainStoryLeft .author {
@@ -37,6 +56,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-style: italic;
     font-weight: 200;
+    margin-right: 360px;
 }
 
 .mainStoryLeft .paragraphMain p {
