--- a/website_php_2203/Styles/sixStories.css
+++ b/website_php_2203/Styles/sixStories.css
@@ -24,6 +24,36 @@
         padding-right: 20px;
     }
     
+    .sixStoriesAndRight .headerWithPubDate a:hover {
+        text-shadow: 0.5px 0.1px black;
+    }
+    
+    .sixStoriesAndRight .readMore a p {
+        font-size: 16px;
+        font-weight: 800;
+        text-transform: uppercase;
+        font-family: 'Titillium Web', sans-serif;
+        text-align: right;
+        margin-bottom: 30px;
+    }
+    
+    .sixStoriesAndRight .readMore {
+        display: flex;
+    }
+    
+    .sixStoriesAndRight .readMore .author p {
+        font-size: 12px;
+        color: #808080;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+        font-style: italic;
+        font-weight: 200;
+        margin-top: 2.5px;
+    }
+    
+    .sixStoriesAndRight .readMore a:hover p {
+        color: #FFC845;
+    }
+    
     .sixStoriesAndRight .right {
         margin-left: 80px;
     }
@@ -35,18 +65,6 @@
     .story a {
         background-color: #007BFF;
         font-size: 12px;
-    }
-    
-    .story .heading02 a {
-        background-color: #DC4C3A;
-    }
-    
-    .story .heading04 a {
-        background-color: #DC4C3A;
-    }
-    
-    .story .heading06 a {
-        background-color: #DC4C3A;
     }
     
     .story .number h1 {
