--- a/website_php_2203/Styles/articleStyles.css
+++ b/website_php_2203/Styles/articleStyles.css
@@ -9,6 +9,10 @@
      padding-bottom: 0px;
  }
  
+ .rightSide .header a:hover {
+     text-shadow: 0.1px 0.25px black;
+ }
+ 
  .article p {
      font-size: 16px;
      line-height: 30px;
