--- a/website_php_2203/Styles/sixStories.css
+++ b/website_php_2203/Styles/sixStories.css
@@ -6,6 +6,10 @@
         display: grid;
     }
     
+    .sixStoriesAndRight .mainStoryLeft h2 a:hover {
+        text-shadow: 0.5px 0.1px black;
+    }
+    
     .sixStoriesAndRight .mainStoryLeft02 {
         padding-left: 55px;
         border-left: 1px solid #848484;
@@ -62,7 +66,11 @@
         margin-bottom: 24px;
     }
     
-    .story a {
+    .story h3 a:hover {
+        text-shadow: 0.2px 0.5px black;
+    }
+    
+    .story .topPart .bottomPart a {
         background-color: #007BFF;
         font-size: 12px;
     }
